exercises/networking/cka/08-networkpolicy-troubleshooting/fixed-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: cka-net-8
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
